--- a/index.html
+++ b/index.html
@@ -1,5 +1,76 @@
-<html>
-  <body>
-    <h1>hola</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body bgcolor="4B0082"> <!-- Color morado oscuro -->
+    <table width="100%" height="200">
+        <tr>
+            <td width="30%">
+                <center><img src="./img/logo3.png" alt="Logo de la Empresa"></center>
+            </td>
+            <td>
+                <center>
+                    <h3><font color="white" size="5px">EMPRESA TECNOLOGICA</font></h3>
+                    <h1><font color="#10eee4" size="15px">"ZONA GAMER"</font></h1>
+                </center>
+            </td>
+        </tr>
+    </table>
+
+    <table width="100%" bgcolor="red" height="30">
+        <tr>
+            <td width="30%">
+                <center>
+                    <font color="white" size="6"></font>
+                </center>
+            </td>
+            <td width="40%">
+                <center>
+                    <font color="white" size="6">Servicios</font>
+                </center>
+            </td>
+            <td width="30%">
+                <center>
+                    <font color="white" size="6"></font>
+                </center>
+            </td>
+        </tr>
+    </table>
+    
+    <center><img src="./img/ooo.png" alt="" height="210px" width="487px"></center>
+    <table width="100%">
+        <tr height="400">
+            <td width="30%">
+                <marquee behavior="alternate">
+                    <h1><font color="yellow" size="25px">ELIGE YA</font></h1>
+                </marquee>
+            </td>
+            <td width="70%">
+                <center>
+                    <form action="productos.html"> <!-- Redirige a "productos.html" -->
+                        <label><h1>Escoger una Opción:</h1></label>
+                        <br><br>
+                        <select name="editor" id="editor">
+                            <option value="productos">M. computadora</option>
+                            <option value="productos">M. tablet</option>
+                            <option value="productos">M. celular</option>
+                            <option value="productos">M. teclado</option>
+                            <option value="productos">M. mouse</option>
+                            <option value="productos">M. audifonos</option>
+                        </select>
+                        <br><br>
+                        <input type="submit" value="Enviar">
+                    </form>
+                </center>
+            </td>
+        </tr>
+    </table>
+    <center><h1 size="30px" >WEB MASTER: EFRAIN GARCIA</h1></center>
+</body>
+
 </html>
