--- a/index.html
+++ b/index.html
@@ -7,48 +7,52 @@
     <title>Document</title>
 </head>
 
-<body bgcolor="#4B0082" text="white" style="margin: 0; font-family: Arial, sans-serif;">
-    <!-- Header Table -->
-    <table width="100%" height="200" cellpadding="10" cellspacing="0" border="0">
+<body bgcolor="4B0082"> <!-- Color morado oscuro -->
+    <table width="100%" height="200">
         <tr>
-            <td width="30%" style="text-align: center;">
-                <img src="logo3.png" alt="Logo de la Empresa">
+            <td width="30%">
+                <center><img src="logo3.png" alt="Logo de la Empresa"></center>
             </td>
-            <td style="text-align: center;">
-                <h3 style="margin: 0;">EMPRESA TECNOLOGICA</h3>
-                <h1 style="color: #10eee4; margin: 0;">"ZONA GAMER"</h1>
+            <td>
+                <center>
+                    <h3><font color="white" size="5px">EMPRESA TECNOLOGICA</font></h3>
+                    <h1><font color="#10eee4" size="15px">"ZONA GAMER"</font></h1>
+                </center>
             </td>
         </tr>
     </table>
 
-    <!-- Menu Table -->
-    <table width="100%" bgcolor="red" height="30" cellpadding="10" cellspacing="0" border="0">
+    <table width="100%" bgcolor="red" height="30">
         <tr>
-            <td width="30%" style="text-align: center;">
-                <span>Empresa</span>
+            <td width="30%">
+                <center>
+                    <font color="white" size="6">Empresa</font>
+                </center>
             </td>
-            <td width="40%" style="text-align: center;">
-                <span>Productos</span>
+            <td width="40%">
+                <center>
+                    <font color="white" size="6">Productos</font>
+                </center>
             </td>
-            <td width="30%" style="text-align: center;">
-                <span>Servicios</span>
+            <td width="30%">
+                <center>
+                    <font color="white" size="6">Servicios</font>
+                </center>
             </td>
         </tr>
     </table>
-
-    <!-- Image Table -->
     <table width="100%" cellpadding="10" cellspacing="0" border="0">
         <tr>
-            <td style="vertical-align: top;">
-                <img src="10.png" alt="Imagen 1" height="210">
+            <td>
+                <img src="10.png" alt="Imagen 1" height="300px" width="100%">
             </td>
-            <td style="vertical-align: top;">
-                <img src="25.png" alt="Imagen 2" width="100%" height="208">
+            <td>
+                <img src="25.png" alt="Imagen 2" height="300px" width="100%">
             </td>
-            <td style="vertical-align: top;">
-                <img src="ooo.png" alt="Imagen 3" width="100%" height="210">
+            <td>
+                <img src="ooo.png" alt="Imagen 3" height="300px" width="100%">
             </td>
-        </tr>
+            <td>
     </table>
 
     <table width="100%">
